k8s/backend-ws.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-ws
  labels:
    app: backend-ws
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-ws
  template:
    metadata:
      labels:
        app: backend-ws
    spec:
      containers:
      - name: backend-ws
        image: transport-backend:latest
        imagePullPolicy: IfNotPresent
        command: ["ws"]
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-ws
spec:
  selector:
    app: backend-ws
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
